2011-08-28 mmichaud <michael.michaud@free.fr>
    * [ID 3397856] VertexZValueStyle now extends a new TextBasedVertexStyle
      so that z of Points are displayed as well as z of Linestring vertices 
    * [ID 3398100] Attribute query throws exception with Contains or StartsWith 
      used with a null  

2011-08-27 Matthias Scholz <ms@jammerhund.de>
	* BlendLineStringsPlugIn
		* now the user have the choise which attributes will be transfered to
		  the resulting lines

2011-08-25 mmichaud <michael.michaud@free.fr>
    * Move AddImageLayerPlugIn to File menu
    * Move RunDatastoreQueryPlugIn to File menu
    * [ID 3363920] Center dialog box on OpenJUMP windows for following plugins 
      (using GUIUtil.centreOnWindow)
        * GUIUtil : adds a method to pack the dialog box before centering it 
        * Edit>Selection>Select by geometry type
        * Tools>Edit Geometry>Blend LineStrings

2011-08-14 Matthias Scholz <ms@jammerhund.de>
	* BlendLineStringsPlugIn
		* some Enhancements: choice if the source linestrings are deleted and
		  if a new layer with the reluts are created
		* Bugfix: if the result was more then one blended linestring, then all
		  linestrings had the attributes from the first selected linestring and
		  not from the first blended

2011-07-31 mmichaud <michael.michaud@free.fr>
    * Fix/improve ColorThemingStylePanel. The main option is now attribute
      Attribute choice will decide which classification methods are allowed

2011-07-25 mmichaud <michael.michaud@free.fr>
    * Fix/improve reverse function in GeometryFunctionPlugIn [ID 3360102]
      Now works on a clone without modifying source geometry and works on any
      kind of geometry.

2011-07-25 mmichaud <michael.michaud@free.fr>
    * Fixed a bug in ColorThemingStylePanel.
    * Add an Icon for SaveLayersWithoutDataSourcePlugIn

2011-07-24 mmichaud <michael.michaud@free.fr>
    * Fixed a bug related to tables having same names in public schema and
      another schema [ID 3303503]